--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=remotemysql.com
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=4gqKuXkhj0
+DB_USERNAME=4gqKuXkhj0
+DB_PASSWORD=7oLPZ8q2VJ
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
