--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=remotemysql.com
 DB_PORT=3306
-DB_DATABASE=4gqKuXkhj0
-DB_USERNAME=4gqKuXkhj0
-DB_PASSWORD=7oLPZ8q2VJ
+DB_DATABASE=KkR96dbHd4
+DB_USERNAME=KkR96dbHd4
+DB_PASSWORD=U0NJArxqSr
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
